Styled the nav bar and fixed some spacing issues on the custom page, and linked navbar to elements

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -19,16 +19,12 @@ background-size: cover;height: 300%;background-position: bottom;min-height: 100v
 
 .nomargin{margin: 0px;}
 
-.example6 .navbar-brand{
-  background: url("../Images/MainLogoWhite.png") center / 50% no-repeat;
-  width: 200px;
-}
 
 .reportcustominput {
   border: 0px;
   border-bottom: 2px solid #1c1c1c;
   background-color: transparent;
-  width:100px;
+  width:120px;
   text-align: center;
 }
 
